# okrodata

./: .gitignore  .nojekyll  404.html  404.qmd  CNAME  README.md  _quarto.yml  about.html  about.qmd  blog.html  blog.qmd  index.html  index.qmd  justfile  listings.json  open_source.html  open_source.qmd  pyproject.toml  search.json  sitemap.xml  styles.css
.quarto/giscus/: Okroshiashvili.okrodata.json
.quarto/idx/: 404.qmd.json  about.qmd.json  blog.qmd.json  index.qmd.json  open_source.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 0bc608a4  0d294ac6  1210bc51  5cf294b9  653abe54  6832c336  6ba1aac0  6bf53c60  7bd87644  INDEX  aaf269bb  b82a9401  bc3a677e  c83ac1c8  c9dd5584
_site/: about.html  listings.json  robots.txt  sitemap.xml
posts/: _metadata.yml
posts/economics/: single_market_economy.html  single_market_economy.qmd
posts/general/: information_theory.html  information_theory.qmd
posts/mathematics/: integer_sequences.html  integer_sequences.qmd  linear_algebra_1.html  linear_algebra_1.qmd  linear_algebra_2.html  linear_algebra_2.qmd  linear_algebra_3.html  linear_algebra_3.qmd  linear_algebra_4.html  linear_algebra_4.qmd  linear_algebra_5.html  linear_algebra_5.qmd  linear_algebra_6.html  linear_algebra_6.qmd  taylor_series_expansion.html  taylor_series_expansion.qmd
posts/pandas/: pandas_tips_and_tricks_1.html  pandas_tips_and_tricks_1.qmd  pandas_tips_and_tricks_2.html  pandas_tips_and_tricks_2.qmd  pandas_tips_and_tricks_3.html  pandas_tips_and_tricks_3.qmd  pandas_tips_and_tricks_4.html  (+1 more)
templates/: template.html  template.qmd
(+86 files in other folders)
